simplify analysis script to only include fits, notebooks for exps

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,15 @@ __pycache__/
 logs/
 logs-old/
 wandb/
+figs/
+.ipynb_checkpoints/
+logs-test/
+datasets/
+paper/
 *.out
 count.py
 *.png
 train.json
 train.txt
-figs/
 tokenizer.json
-.ipynb_checkpoints/
-logs-test/
 test.sh
