--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "calflops>=0.3.2",
+    "datasets>=3.1.0",
+    "hmmlearn>=0.3.3",
     "numpy>=2.1.3",
     "pandas>=2.2.3",
     "plotnine>=0.14.3",
     "scipy>=1.14.1",
     "torch>=2.5.1",
     "tqdm>=4.67.1",
+    "transformers>=4.46.3",
+    "trl>=0.12.1",
+    "wandb",
 ]
