big update for new version, add isoflops setup, clean up analysis scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,13 @@ dependencies = [
     "calflops>=0.3.2",
     "datasets>=3.1.0",
     "hmmlearn>=0.3.3",
+    "ipykernel>=6.29.5",
+    "notebook>=7.3.2",
     "numpy>=2.1.3",
     "pandas>=2.2.3",
     "plotnine>=0.14.3",
+    "pyvene>=0.1.7",
+    "scikit-learn>=1.5.2",
     "scipy>=1.14.1",
     "torch>=2.5.1",
     "tqdm>=4.67.1",
